--- a/source/catalog.html
+++ b/source/catalog.html
@@ -402,10 +402,8 @@
       </ul>
     </div>
     <div class="footer__copyright copyright">
-      <p class="copyright__text"></p>
+      <p class="copyright__text">Разработано</p>
       <a class="copyright__link" href="#" aria-label="HTML Academy">
-        <p class="copyright"></p>
-        Разработано
         <svg class="copyright__svg" width="28" height="35">
           <use xlink:href="#htmlacademy"></use>
         </svg>
