--- a/source/index.html
+++ b/source/index.html
@@ -263,8 +263,9 @@
           <div class="main-nav__list main-nav__delivery main-nav__delivery--index">
             <a class="main-nav__delivery--link  main-nav__titles" href="#">
               Бесплатная доставка по России
+            </a>
           </div>
-          </p>
+
         </div>
       </nav>
     </div>
@@ -321,13 +322,13 @@
         <div class="offer__img-wrap">
           <picture>
             <source media="(min-width: 1150px)"
-              srcset="./img/images/triple-set-desktop.jpg 1x, ./img/images/triple-set-desktop.jpg 2x" width="525"
+              srcset="./img/index/triple-set-desktop.jpg 1x, ./img/index/triple-set-desktop.jpg 2x" width="525"
               height="638">
             <source media="(min-width: 768px)"
-              srcset="./img/images/triple-set-tablet.jpg 1x, ./img/images/triple-set-tablet.jpg 2x" width="334"
+              srcset="./img/index/triple-set-tablet.jpg 1x, ./img/index/triple-set-tablet.jpg 2x" width="334"
               height="404">
-            <img class="offer__image offer__picture" src="./img/images/triple-set-mobile.jpg"
-              srcset="./img/images/triple-set-mobile.jpg 2x" alt="Товары недели «Вязаные корзинки»" width="260"
+            <img class="offer__image offer__picture" src="./img/index/triple-set-mobile.jpg"
+              srcset="./img/index/triple-set-mobile.jpg 2x" alt="Товары недели «Вязаные корзинки»" width="260"
               height="315">
           </picture>
         </div>
@@ -393,7 +394,7 @@
 
     <section class="page-main__contacts contacts">
       <h2 class="contacts__title section-title">Контакты</h2>
-      <div class="contacts__wrap wrapper">
+      <div class="contacts__wrap">
         <div class="contacts__list wrapper">
           <table class="contacts__item contacts__item--email">
             <tbody>
@@ -429,46 +430,49 @@
     </section>
   </main>
 
-  <footer class="footer wrapper">
-    <div class="footer__logo">
-      <a class="footer__logo">
-        <svg class="footer__logo-img" width="86" height="35">
-          <use xlink:href="#logo-footer"></use>
-        </svg>
-      </a>
-    </div>
-    <div class="footer__social">
-      <ul class="footer__list footer__list--social social">
-        <li class="social__item">
-          <a class="social__link" href="#" aria-label="Мы в контакте">
-            <svg class="social__svg" width="27" height="18">
-              <use xlink:href="#VK"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link" href="#" aria-label="Мы в youtube">
-            <svg class="social__svg social__svg--youtube" width="24" height="20">
-              <use xlink:href="#youtube"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link" href="#" aria-label="Мы в Твитер">
-            <svg class="social__svg social__svg--twitter" width="20" height="18">
-              <use xlink:href="#twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer__copyright copyright">
-      <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="#" aria-label="HTML Academy">
-        <svg class="copyright__svg" width="28" height="35">
-          <use xlink:href="#htmlacademy"></use>
-        </svg>
-      </a>
+  <footer class="footer">
+    <div class="footer__wrap">
+
+      <div class="footer__logo">
+        <a class="footer__logo">
+          <svg class="footer__logo-img" width="86" height="35">
+            <use xlink:href="#logo-footer"></use>
+          </svg>
+        </a>
+      </div>
+      <div class="footer__social">
+        <ul class="footer__list footer__list--social social">
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Мы в контакте">
+              <svg class="social__svg" width="27" height="18">
+                <use xlink:href="#VK"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Мы в youtube">
+              <svg class="social__svg social__svg--youtube" width="24" height="20">
+                <use xlink:href="#youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Мы в Твитер">
+              <svg class="social__svg social__svg--twitter" width="20" height="18">
+                <use xlink:href="#twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+        <a class="copyright__link" href="#" aria-label="HTML Academy">
+          <svg class="copyright__svg" width="28" height="35">
+            <use xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
   </footer>
